# kaggle-c-lib

./: CMakeLists.txt  README.md
examples/: download_example.c
include/: kaggle_downloader.h
src/: curl_utils.c  kaggle_downloader.c
tests/: test_downloader.c
